install du package laminas necessaire aux routes

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "filp/whoops": "1.*",
     "fakerphp/faker": "^1.21",
     "nesbot/carbon": "^2.64",
-    "league/route": "^5.1"
+    "league/route": "^5.1",
+    "laminas/laminas-diactoros": "^2.24"
   }
 }
