--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "fakerphp/faker": "^1.21",
     "nesbot/carbon": "^2.64",
     "league/route": "^5.1",
-    "laminas/laminas-diactoros": "^2.24"
+    "laminas/laminas-diactoros": "^2.24",
+    "laminas/laminas-httphandlerrunner": "^2.4"
   }
 }
